fix: clipped icons

--- a/Dribbblish/user.css
+++ b/Dribbblish/user.css
@@ -1401,6 +1401,10 @@ button#player-button-repeat,
     margin-right: 0;
 }
 
+.SidebarListItem__label {
+    overflow: unset;
+}
+
 .SidebarListItem__label:before {
     color: var(--modspotify_preserve_1);
 }
